Main Pages Push
Contains most files for the website.

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link href='footer.css' rel='stylesheet' type='text/css'>
     <link href='header.css' rel='stylesheet' type='text/css'>
 
-    <title>Tara L. Parker</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div id="content">
             <div id="center">
                 <style>p{font-size:3vh; padding-top: 10%;}</style>
-                <p><img src="/images/sig.png"><br><a href="about.html">01110100 01100001 01110010 01100001</a></p>
+                <p><img src="/images/sig.png"><br><a href="mailto:tara@taralparker.com">tara@taralparker.com</a></p>
             </div>
         </div>
 
