--- a/cv.html
+++ b/cv.html
@@ -7,8 +7,27 @@
     <link href='footer.css' rel='stylesheet' type='text/css'>
     <link href='header.css' rel='stylesheet' type='text/css'>
 
-    <title>Tara L. Parker</title>
+    <title>C.V.</title>
 </head>
+
+<style>
+    body {
+        background: #FFF5D8 url(images/flower_trans.PNG) no-repeat fixed 100% 100%;
+        background-size: 10%;
+    }
+    * {
+        padding: 0 0 2% 0;   /* top right bottom left*/
+        margin: 0;
+    }
+    .fit { /* set relative picture size */
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .center {
+        display: block;
+        margin: auto;
+    }
+</style>
 
 <body>
     <div id="wrapper">
@@ -20,10 +39,14 @@
             </header>
         </div>
 
+<!--        <div id="content">
+            <img class="center fit" src="images/cv_trans2.png" >
+        </div>
+-->
         <div id="content">
             <div id="center">
                 <style>p{font-size:3vh; padding-top: 10%;}</style>
-                <p><img src="/images/sig.png"><br><a href="about.html">01110100 01100001 01110010 01100001</a></p>
+                <p><img src="/images/sig.png"><br><a href="index.html">Page In Progress</a></p>
             </div>
         </div>
 
