--- a/404.html
+++ b/404.html
@@ -16,7 +16,9 @@
         <header>
             <a href="index.html">Home</a>   &#160;&#160;
             <a href="about.html">About Me</a>     &#160;&#160;
-            <a href="cv.html">Curriculum Vitae</a>   &#160;&#160;  <a href="publications.html">Publications</a>   &#160;&#160;  <a href="contact.html">Contact</a>
+            <a href="/documents/Parker_CV.pdf">Curriculum Vitae</a>   &#160;&#160;
+            <a href="publications.html">Publications</a>    &#160;&#160;
+            <a href="contact.html">Contact</a>
         </header>
     </div>
 
