--- a/publications.html
+++ b/publications.html
@@ -15,43 +15,45 @@
             <header>
                 <a href="index.html">Home</a>   &#160;&#160;
                 <a href="about.html">About Me</a>     &#160;&#160;
-                <a href="cv.html">Curriculum Vitae</a>   &#160;&#160;  <a href="publications.html">Publications</a>   &#160;&#160;  <a href="contact.html">Contact</a>
+                <a href="/documents/Parker_CV.pdf">Curriculum Vitae</a>   &#160;&#160;
+                <a href="publications.html">Publications</a>    &#160;&#160;
+                <a href="contact.html">Contact</a>
             </header>
         </div>
 
-    <div id="content">
-        <div id="center">
-            <style>p{font-size:3vh; padding-top: 10%;}h3{text-wrap: normal; white-space: normal; margin-bottom: .5em;
-                                                          margin-top: 0;}</style>
-            <p><img src="/images/sig.png"><br>Publications</p>
-            <h3>
-                <br>
-                <a style="color:rgba(10, 56, 105, 0.65); font-size: 16pt; font-weight: bold;"
-                   href="http://vialab.science.uoit.ca/textvis2013/papers/Ramanathan-TextVis2013.pdf">
-                    Integrating Heterogeneous Healthcare Datasets and Visual Analytics for Disease Bio-surveillance and
-                    Dynamics</a>
-                <h3 style="font-size: 16pt; font-weight: lighter; color: #898989;">
-                    IEEE Workshop on Interactive Visual Text Analytics</h3>
-                <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
-                    Ramanathan, A., Pullum, L.L., Steed, C.A., Parker, T.L., Quinn, S.P. and Chennubholta, C.S.</h3>
-                <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
-                    October 2013</h3><br>
-            </h3>
-            <h3>
-                <a style="color:rgba(10, 56, 105, 0.65); font-size: 16pt; font-weight: bold;"
-                   href="http://www.cc.gatech.edu/gvu/ii/PublicHealthVis/Papers/OrBIT_PHDecisionMaking_F.pdf">
-                    Oak Ridge Bio-surveillance Toolkit (ORBiT): Integrating Big-Data Analytics with Visual Analysis for
-                    Public Health Dynamics
-                </a>
-                <h3 style="font-size: 16pt; font-weight: lighter; color: #898989;">
-                IEEE VAST Workshop on Public Health's Wicked Problems: Can InfoVis Save Lives?</h3>
-                <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
-                    Ramanathan, A., Pullum, L.L., Steed, C.A., Quinn, S.P., Chennubholta, C.S. and Parker, T.L.</h3>
-                <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
-                    October 2013</h3>
-            </h3>
+        <div id="content">
+            <div id="center">
+                <style>p{font-size:3vh; padding-top: 10%;}h3{text-wrap: normal; white-space: normal; margin-bottom: .5em;
+                                                              margin-top: 0;}</style>
+                <p><img src="/images/sig.png"><br>Publications</p>
+                <h3>
+                    <br>
+                    <a style="color:rgba(10, 56, 105, 0.65); font-size: 16pt; font-weight: bold;"
+                       href="http://vialab.science.uoit.ca/textvis2013/papers/Ramanathan-TextVis2013.pdf">
+                        Integrating Heterogeneous Healthcare Datasets and Visual Analytics for Disease Bio-surveillance and
+                        Dynamics</a>
+                    <h3 style="font-size: 16pt; font-weight: lighter; color: #898989;">
+                        IEEE Workshop on Interactive Visual Text Analytics</h3>
+                    <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
+                        Ramanathan, A., Pullum, L.L., Steed, C.A., Parker, T.L., Quinn, S.P. and Chennubholta, C.S.</h3>
+                    <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
+                        October 2013</h3><br>
+                </h3>
+                <h3>
+                    <a style="color:rgba(10, 56, 105, 0.65); font-size: 16pt; font-weight: bold;"
+                       href="http://www.cc.gatech.edu/gvu/ii/PublicHealthVis/Papers/OrBIT_PHDecisionMaking_F.pdf">
+                        Oak Ridge Bio-surveillance Toolkit (ORBiT): Integrating Big-Data Analytics with Visual Analysis for
+                        Public Health Dynamics
+                    </a>
+                    <h3 style="font-size: 16pt; font-weight: lighter; color: #898989;">
+                    IEEE VAST Workshop on Public Health's Wicked Problems: Can InfoVis Save Lives?</h3>
+                    <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
+                        Ramanathan, A., Pullum, L.L., Steed, C.A., Quinn, S.P., Chennubholta, C.S. and Parker, T.L.</h3>
+                    <h3 style="font-size: 12pt; font-weight: lighter; color: #898989;">
+                        October 2013</h3>
+                </h3>
+            </div>
         </div>
-    </div>
 
         <div id="footer">
             <footer>
