--- a/about.html
+++ b/about.html
@@ -46,8 +46,7 @@
                     Austin, Tx </a><br>
                     <i class="fa fa-graduation-cap"></i><a href="https://www.depts.ttu.edu/coe/"> Computer Science, BSc in Progress </a><br>
                     <i class="fa fa-pencil"></i><a href="publications.html"> Publications </a><br>
-                    <i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/tara-l-parker"> Find Me on
-                        LinkedIn </a>
+                    <i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/tara-l-parker"> LinkedIn </a>
                 </h3>
             </div>
         </div>
