--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 <style>h3{font-size:2vh; line-height: 125%;}</style>
                 <h3>
                     <i class="fa fa-location-arrow" aria-hidden="true"></i><a href="https://goo.gl/maps/hzj1rSqHyqw"> Located in
-                    Austin, Tx </a><br>
+                    Austin, TX </a><br>
                     <i class="fa fa-graduation-cap"></i><a href="https://www.depts.ttu.edu/coe/"> Computer Science, TTU </a><br>
                     <i class="fa fa-pencil"></i><a href="publications.html"> Publications </a><br>
                     <i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/tara-l-parker"> LinkedIn </a>
